--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start": "bun dist/index.js",
     "test": "bun test",
     "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write 'src/**/*.ts'",
     "db:generate": "drizzle-kit generate",
+    "db:push": "bunx drizzle-kit push",
     "db:migrate": "bash scripts/migrate-docker.sh",
-    "db:studio": "drizzle-kit studio",
+    "db:studio": "bunx drizzle-kit studio",
     "check": "bun run format && bun run lint && bunx tsc --noEmit && bun run build"
   },
   "dependencies": {
