--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: bunx tsc --noEmit
 
       - name: Run migrations
-        run: bun run db:push
+        run: bun run db:push:ci
 
       - name: Run tests
         run: bun run test
