--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write 'src/**/*.ts'",
     "db:generate": "drizzle-kit generate",
     "db:push": "bunx drizzle-kit push",
+    "db:push:ci": "bunx drizzle-kit push --force",
     "db:migrate": "bash scripts/migrate-docker.sh",
     "db:studio": "bunx drizzle-kit studio",
     "check": "bun run format && bun run lint && bunx tsc --noEmit && bun run build"
